--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+memkind (1.10.0-1) unstable; urgency=medium
+
+  * New upstream release.
+  * Enable arm64.
+
+ -- Adam Borowski <kilobyte@angband.pl>  Thu, 19 Dec 2019 15:50:38 +0100
+
 memkind (1.10~pre1-1) experimental; urgency=medium
 
   * New upstream git snapshot.
