--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+memkind (1.10.0-4) unstable; urgency=medium
+
+  * Chery-pick fixes for gcc-10.  Closes: #957528.
+  * dh 12.
+
+ -- Adam Borowski <kilobyte@angband.pl>  Sun, 19 Apr 2020 09:43:25 +0200
+
 memkind (1.10.0-3) unstable; urgency=medium
 
   * Skip tests if no NUMA -- some s390x and mips64el official kernels are
