--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+memkind (1.10.1-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ -- Adam Borowski <kilobyte@angband.pl>  Wed, 16 Sep 2020 12:24:21 +0200
+
 memkind (1.10.1~rc1-1) experimental; urgency=medium
 
   * A new upstream RC.
