--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+memkind (1.12.0~rc1-1) experimental; urgency=medium
+
+  * New upstream RC.
+  * Update symbols.
+  * Add memtier library.
+
+ -- Adam Borowski <kilobyte@angband.pl>  Fri, 02 Jul 2021 19:17:56 +0200
+
 memkind (1.11.0-1) unstable; urgency=medium
 
   * Upload to unstable.
