--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+memkind (1.13.0-1) unstable; urgency=medium
+
+  * New upstream release.
+  * Update symbols.
+
+ -- Adam Borowski <kilobyte@angband.pl>  Thu, 23 Dec 2021 10:16:19 +0100
+
 memkind (1.12.0-1) unstable; urgency=medium
 
   * New upstream release.
