--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+memkind (1.14.0-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ -- Adam Borowski <kilobyte@angband.pl>  Thu, 07 Jul 2022 10:43:32 +0200
+
 memkind (1.14.0~rc1-1) experimental; urgency=medium
 
   * New upstream RC.
