--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+memkind (1.14.0-2) unstable; urgency=medium
+
+  * Add -dev dependencies to symbol files.
+  * Enable hardening.
+  * Don't parse dpkg-parsechangelog by hand.
+
+ -- Adam Borowski <kilobyte@angband.pl>  Fri, 04 Nov 2022 14:26:59 +0100
+
 memkind (1.14.0-1) unstable; urgency=medium
 
   * New upstream release.
