--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+memkind (1.14.0-3) unstable; urgency=medium
+
+  * Fix FTBFS with gcc-13; closes: #1037773.
+
+ -- Adam Borowski <kilobyte@angband.pl>  Wed, 14 Jun 2023 14:13:10 +0200
+
 memkind (1.14.0-2) unstable; urgency=medium
 
   * Add -dev dependencies to symbol files.
